--- a/index.html
+++ b/index.html
@@ -3,29 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <title>Политика конфиденциальности</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+      line-height: 1.6;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    p {
+      margin-bottom: 1em;
+    }
+  </style>
 </head>
 <body>
   <h1>Политика конфиденциальности</h1>
   <p>Это приложение "Steto" (далее — «мы», «нас», «наше») уважает вашу конфиденциальность. Ниже описано, какие данные могут собираться, как они используются и как обеспечивается их безопасность.</p>
 
   <h2>1. Сбор данных</h2>
-  <p>Мы не собираем персональные данные без вашего согласия. Приложение может использовать сторонние библиотеки (например, аналитика или реклама), которые могут собирать обезличенные данные (например, IP-адрес, тип устройства).</p>
+  <p>Мы не собираем персональные данные без вашего согласия. Приложение может использовать сторонние библиотеки и API (например, аналитика, реклама, Audius API), которые могут собирать обезличенные данные, такие как IP-адрес, тип устройства или действия внутри приложения.</p>
 
-  <h2>2. Использование данных</h2>
-  <p>Собранные данные используются только для улучшения качества приложения и его функциональности.</p>
+  <h2>2. Использование Audius API</h2>
+  <p>Наше приложение использует <strong>Audius API</strong> для получения музыкального контента, метаданных о треках, альбомах и исполнителях. Мы не передаём никакие пользовательские персональные данные в Audius. Вся информация, получаемая от Audius, используется только для отображения и воспроизведения контента.</p>
 
-  <h2>3. Передача данных третьим лицам</h2>
-  <p>Мы не передаём ваши данные третьим лицам, за исключением случаев, когда это требуется законом или осуществляется через используемые сторонние сервисы (например, Google Analytics, AdMob и т. д.).</p>
+  <h2>3. Использование данных</h2>
+  <p>Собранные обезличенные данные используются исключительно для улучшения качества приложения и его функциональности.</p>
 
-  <h2>4. Безопасность данных</h2>
+  <h2>4. Передача данных третьим лицам</h2>
+  <p>Мы не передаём ваши данные третьим лицам, за исключением случаев, когда это требуется законом или осуществляется через используемые сторонние сервисы (например, Google Analytics, AdMob, Audius и др.).</p>
+
+  <h2>5. Безопасность данных</h2>
   <p>Мы принимаем разумные меры для защиты ваших данных, однако абсолютную безопасность гарантировать невозможно.</p>
 
-  <h2>5. Доступ для детей</h2>
+  <h2>6. Доступ для детей</h2>
   <p>Наше приложение предназначено для широкой аудитории, включая детей. Мы соблюдаем требования COPPA и не собираем личную информацию от детей младше 13 лет без согласия родителей.</p>
 
-  <h2>6. Контактная информация</h2>
-  <p>Если у вас есть вопросы, свяжитесь с нами по адресу: muhammad@example.com</p>
+  <h2>7. Изменения политики</h2>
+  <p>Мы оставляем за собой право обновлять настоящую политику конфиденциальности. Все изменения будут опубликованы на этой странице с указанием даты обновления.</p>
 
-  <p><strong>Дата обновления:</strong> 18 мая 2025 г.</p>
+  <h2>8. Контактная информация</h2>
+  <p>Если у вас есть вопросы, свяжитесь с нами по адресу: sodiqov.online@gmail.com</p>
+
+  <p><strong>Дата обновления:</strong> 19 мая 2025 г.</p>
 </body>
 </html>
